[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player/Frostmage.gd" type="Script" id=2]
[ext_resource path="res://ProgressBars/Skill2CDBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://AmmoUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://HUD/HealthBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://ProgressBars/BlinkCDBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://ProgressBars/Skill1CDBar.tscn" type="PackedScene" id=7]

[node name="Frostmage" instance=ExtResource( 1 )]
modulate = Color( 0.0235294, 0, 1, 1 )
position = Vector2( 68.0467, 95.9634 )
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
modulate = Color( 0.34902, 0.380392, 0.384314, 1 )
self_modulate = Color( 0, 0.976471, 1, 1 )

[node name="CollisionShape" parent="." index="2"]
visible = true

[node name="CanvasLayer" type="CanvasLayer" parent="." index="7"]

[node name="Ammo" parent="CanvasLayer" index="0" instance=ExtResource( 4 )]
margin_left = 221.38
margin_top = 980.581
margin_right = 392.38
margin_bottom = 1043.58

[node name="HealthBar" parent="CanvasLayer" index="1" instance=ExtResource( 5 )]
margin_left = 119.381
margin_top = 87.3176
margin_right = 759.381
margin_bottom = 151.318

[node name="PowerBar" type="CanvasLayer" parent="." index="10"]

[node name="BlinkCDBar" parent="PowerBar" index="0" instance=ExtResource( 6 )]

[node name="Skill1CDBar" parent="PowerBar" index="1" instance=ExtResource( 7 )]

[node name="Skill2CDBar" parent="PowerBar" index="2" instance=ExtResource( 3 )]
